--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-heroku==0.3.1
 django-registration==3.1
 django-registration-redux==2.7
 django-user-agents==0.4.0
+gunicorn==19.9.0
 idna==2.9
 Pillow==7.0.0
 psycopg2==2.8.4
